--- a/RedatorSaude/RedatorSaude.csproj
+++ b/RedatorSaude/RedatorSaude.csproj
@@ -5,6 +5,12 @@
     <UserSecretsId>aspnet-RedatorSaude-23947204-156F-4081-8A5F-C51785F6765F</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>false</Optimize>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.3" />
